fix small issues with Sonarcloud