@@ -9,7 +9,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -53,6 +52,6 @@ public class BarkdateService {
                         dog.dogLink(),
                         dog.organizationName()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
